# Fast-Headless-CRM

./: .dockerignore  .env.dev  .env.example  .env.prod  .env.staging  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 869ec457d3b4_initial_migration.py
app/api/: auth.py  companies.py  contacts.py  deals.py  pipelines.py
app/core/: config.py  deps.py  logging.py  security.py
app/crud/: company.py  contact.py  deal.py  pipeline.py  user.py
app/db/: database.py
app/models/: base.py  company.py  contact.py  deal.py  pipeline.py  user.py
app/schemas/: company.py  contact.py  deal.py  pipeline.py  user.py
scripts/: entrypoint.sh  init-db.sh  migrate.sh
